--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "api/index.js",
-        "use": "@vercel/node"
-      }
-    ]
-  }
+  "version": 2,
+  "routes": [
+    { "src": "/daily-dare", "dest": "/api/index.js" }
+  ]
+}
   
